# KPP_Patch

./: README.md  flake.nix  main.py  pyproject.toml
scripts/: update_readme.py
src/patcher/: common.py  patcher.py
src/tui/: cli.py  hints.py  interactive.py
tests/patcher/: test_collections.py
